Поправить клиент и пару ошибок